# rinha-2024-q4-python-fastapi

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  script.sql
app/: database.py  main.py  models.py  routes.py
app/database/: database.py
app/schemas/: add_transaction.py
