[tool.poetry]
name = "rinha-2024-q4-python-fastapi"
version = "0.1.0"
description = ""
authors = ["Yuri Hartmann <yurihartmann@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
sqlmodel = "^0.0.14"
pydantic = "^2.6.1"
orjson = "^3.9.13"
uvicorn = "^0.27.0.post1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
